--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
+    "date-fns": "^4.1.0",
     "jose": "^6.0.11",
     "next": "15.3.4",
     "react": "^19.0.0",
