--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "jose": "^6.0.11",
+    "mapbox-gl": "^3.13.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "yup": "^1.6.1",
     "zustand": "^5.0.6"
