--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@mapbox/search-js-react": "^1.3.0",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
