--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@hookform/resolvers": "^5.1.1",
     "@mapbox/search-js-react": "^1.3.0",
     "@prisma/client": "^6.11.1",
+    "@tavily/core": "^0.5.11",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "jose": "^6.0.11",
     "mapbox-gl": "^3.13.0",
     "next": "15.3.4",
+    "openai": "^5.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
