--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "yup": "^1.6.1",
