--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tavily/core": "^0.5.11",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.22",
     "jose": "^6.0.11",
     "mapbox-gl": "^3.13.0",
     "next": "15.3.4",
