--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tavily/core": "^0.5.11",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
+    "file-type": "^21.1.1",
     "framer-motion": "^12.23.22",
     "jose": "^6.0.11",
     "mapbox-gl": "^3.13.0",
@@ -26,7 +27,10 @@
     "react-hook-form": "^7.61.1",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
+    "sanitize-filename": "^1.6.3",
+    "sharp": "^0.34.5",
     "swiper": "^11.2.10",
+    "uuid": "^13.0.0",
     "yup": "^1.6.1",
     "zustand": "^5.0.6"
   },
