--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "framer-motion": "^12.23.22",
     "jose": "^6.0.11",
     "mapbox-gl": "^3.13.0",
-    "next": "15.3.4",
+    "next": "^15.3.6",
     "openai": "^5.13.1",
     "prisma": "^6.11.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.61.1",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
